remove node_modeules

--- a/wp-content/themes/primusBuildersInc/sass/style.scss
+++ b/wp-content/themes/primusBuildersInc/sass/style.scss
@@ -6,6 +6,7 @@ $third-color: #090F15;//very dark blue
 
 .about-image {
   height: 260px;
+    // height: 860px;
   width: 100%;
   background-image: url("../img/tools002.jpeg");
   background-position: center;
